--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "calculator-constructor",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://midorun.github.io/calculator-constructor",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.0",
     "@testing-library/jest-dom": "^4.2.4",
@@ -24,7 +25,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -46,6 +49,7 @@
     "@typescript-eslint/parser": "^5.17.0",
     "eslint": "^7.14.0",
     "eslint-plugin-react": "^7.29.4",
+    "gh-pages": "^3.2.3",
     "tailwindcss": "^3.0.23"
   }
 }
